2004-09-19  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (type_label): Type label for unsigned-long and 
	unsigned-short added.
	(perl_code): Die if uninitialized value is given.
	(is_all_implemented): New function.

	* ManakaiDOMXML.dis: New module.

	* ManakaiDOMCore.dis: New module.

	* dis2pm.pl (dis2perl): 'Overridden' added.

2004-09-18  Wakaba  <wakaba@suika.fam.cx>

	* ManakaiDOM.dis (MDOM_NEWCHILD_IS_REFCHILD): New warning.
	(ManakaiDOMNodeObject->orphanate): New internal method.
	(Interface[ManakaiDOMNodeObject, ManakaiDOMNodeReference]): All calls 
	of internal methods are now qualified by the package name.

2004-09-17  Wakaba  <wakaba@suika.fam.cx>

	* DOMMain.dis: 'SpecLevel' attribute added.

	* idl2dis.pl (level): Set 'SpecLevel' attribute as well as 'Level'.

	* dis2pm.pl (get_level_description): Attribute name to see is
	changed from 'Level' to 'SpecLevel'
	(const2perl): Don't hardlink constant not to be warned
	by perl -w.
	(ops2perl): Declare subroutine 'DESTROY' not to be warned by
	perl -w.
	(get_internal_code): Support of lang:dis.

	* ManakaiDOM.dis (newReference): New parameter 'class' introduced.

	* dis2pm.pl (perl_builtin_code:<ManakaiDOM:ManakaiDOMNamespaceURI>): 
	Separeted from "DOMString".
	(if2perl, attr2perl): Don't cast to DOMString.

2004-09-15  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (perl_builtin_code): __CODE{CheckNCName}__ implemented.
	(perl_if): Don't indent if preprocessing direction found.
	(perl_code_source): Add \n before the #line directive.

2004-09-14  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (get_internal_code): __INT{{name}}__ syntax now support
	attribute.
	(perl_code): __SUPER{name}__ syntax implemented.

2004-09-13  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (dis2perl): New.

2004-09-12  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (get_warning_perl_code): New.

2004-09-10  Wakaba  <wakaba@suika.fam.cx>

	* ManakaiDOM.dis (MDOM_NS_EMPTY_URI): New Exception type.
	(ManakaiDOMNamespaceURI): New DataType.
