@@ -1,5 +1,10 @@
 2004-09-19  Wakaba  <wakaba@suika.fam.cx>
 
+	* dis2pm.pl (datatype2perl, datatypealias2perl): "FullName" attribute 
+	introduced.
+
+	* ManakaiDOMMain.dis: Renamed from "ManakaiDOM.dis".
+
 	* dis2pm.pl (type_label): Type label for unsigned-long and 
 	unsigned-short added.
 	(perl_code): Die if uninitialized value is given.
